--- a/index.html
+++ b/index.html
@@ -4,16 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-
-    <input id="input" type="text">
-    <button id="add"> add item</button>
-    <button id="clear"> clear</button>
-
+    <div class="title">
+        <h1>My TODO list</h1>
+    </div>
+    <div class="main">
+        <div class="head-part">
+            <input id="input" type="text">
+            <button id="add"> ADD</button>
+            <button id="clear"> CLEAR</button>
+        </div>
+    
     <ul class="list"></ul>
 
+    </div>
+    
     <script src="main.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
 </body>
 </html>
